--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.3",
+    "chai-files": "^1.4.0",
     "chai-http": "^4.3.0",
     "mocha": "^8.3.1",
     "sequelize-cli": "^6.2.0",
