--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "sequelize-slugify": "^1.5.0"
   },
   "devDependencies": {
     "chai": "^4.3.3",
