--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server",
-    "test": "npm run reset && mocha",
+    "test": "npm run reset && mocha --timeout 5000",
     "reset": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
   },
   "repository": {
