--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.11",
     "vue": "^2.6.11",
+    "vue-fuse": "^3.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuetify-confirm": "^2.0.6",
@@ -22,7 +23,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "^4.1.1",
+    "@vue/cli-service": "^4.5.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
