--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.5.0",
     "sequelize-slugify": "^1.5.0"
   },
