--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,41 +4,29 @@ services:
     build:
       context: ./Backend
       dockerfile: Dockerfile
+    env_file: ./.env
     ports:
-      - 3000:3000
+      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
     environment:
       - NODE_ENV=production
-    networks:
-      - backend_net
     depends_on:
       - mysqldb
   frontend:
     build:
       context: ./Frontend
       dockerfile: Dockerfile
-    expose:
-      - "8080"
     ports:
-      - "8080:8080"
+      - 8080:8080
     volumes:
       - ./:/app
-    networks:
-      - backend_net
     depends_on:
       - mysqldb
   mysqldb:
-    image: mysql:latest
-    command: --default-authentication-plugin=mysql_native_password
+    image: mysql
     restart: always
+    env_file: .env
     environment:
-      - MYSQL_DATABASE=p07_social_network
-      - MYSQL_ROOT_PASSWORD=secret
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DATABASE
     ports:
-      - 3306:3306
-    expose:
-      - 3306
-    networks:
-      - backend_net
-networks:
-  backend_net:
-    name: p07_network
+      - $MYSQL_LOCAL_PORT:$MYSQL_DOCKER_PORT
