BACKEND - suppression du dossier temp - ignorer la suppression d'un fichier si il n'est pas présent - correction des bugs de defaultValues pour les models Post et User - création du fichier images dans Dockerfile avec les sous dossiers - création des scripts migrate et seed FRONTEND - ajout d'un htaccess - correction du bug qui excécuté le script de validation d'ajout d'image - correction du bug de redirection lors de l'inscription
Ajout du Readme

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -3,5 +3,9 @@ WORKDIR /app
 COPY package.json /app
 RUN npm install
 COPY . /app
+RUN mkdir /app/images
+RUN mkdir /app/images/avatar
+RUN mkdir /app/images/post
+COPY ./test/images/default_avatar.png /app/images/avatar
 EXPOSE 3000
 CMD ["npm", "start"]
