BACKEND - adaptation du seeder au projet - correction de faute de frappe - correction des tests au nouveau admin FRONTEND - correction de la fonction recherche

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -8,4 +8,5 @@ RUN mkdir /app/images/avatar
 RUN mkdir /app/images/post
 COPY ./test/images/default_avatar.png /app/images/avatar
 EXPOSE 3000
+CMD ["npm", "run", "seed"]
 CMD ["npm", "start"]
