--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -8,5 +8,4 @@ RUN mkdir /app/images/avatar
 RUN mkdir /app/images/post
 COPY ./test/images/default_avatar.png /app/images/avatar
 EXPOSE 3000
-CMD ["npm", "run", "seed"]
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
